kubetest-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubetest-lb
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: kubetest
